headline text add, event page list fix, buy now button firefox fix

--- a/less/mst_style.less
+++ b/less/mst_style.less
@@ -355,7 +355,7 @@ section {
 		color: #333;
 		font-size: 20px;
 	    font-weight: normal;
-	    margin: 0 0 55px;
+	    margin: 0 0 40px;
 	    text-transform: uppercase;
 	}
 }
@@ -398,6 +398,10 @@ section {
 			font-size: 20px;
 			font-weight: 100;
 		    margin: 0 0 40px;
+
+		    a {
+		    	color: #fff;
+		    }
 		}
 	}
 
@@ -493,6 +497,7 @@ section {
 	    font-family: 'HelveticaNeue LT 55 Roman';
     	text-transform: uppercase;
     	position: relative;
+    	min-height: 290px;
 
     	&:before {
 		    content: '';
@@ -603,7 +608,7 @@ section {
 				color: #FFF;
 			    font-size: 16px;
 			    border: 0;
-			    padding: 6px 30px;
+			    padding: 6px 25px;
 			    text-transform: uppercase;
 			    .transition(all 0.5s);
 
